Fixed info icon alignment.

--- a/webroot/css/voms-provisioner.css
+++ b/webroot/css/voms-provisioner.css
@@ -46,7 +46,7 @@
 }
 
 .info-box .material-icons {
-  margin-top: 0.05rem !important;
+  margin-top: 1px !important;
 }
 
 .info-box .material-icons:hover {
